create connection succesfull with database and create docker

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 APP_ENV="development" # production - development
 NAME_APP="" # Sirve para agregarle un nombre a nuestro servicios
+
+DB_HOST="" # Host de la base de datos
+DB_USER="" # Usuario de la base de datos
+POSTGRES_PASSWORD="" # Contraseña de la base de datos
+DB_NAME="" # Nombre de la base de datos
